horizontal scrolling fixed

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,6 @@
 }
 
 body {
-  overflow-x: hidden;
   background-color: #101111;
 }
 
@@ -32,3 +31,8 @@ html {
   scroll-behavior: smooth;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
